# Cpp-Winsock-Library

./: README.md  Winsock.sln
Winsock/: CMakeLists.txt  Winsock.vcxproj  Winsock.vcxproj.filters
Winsock/include/: Net.hpp
Winsock/include/Utils/: NonCopyable.hpp
Winsock/include/client/: TcpClient.hpp  UDPClient.hpp
Winsock/include/core/: DNS_RESOLVER.hpp  Endpoint.hpp  NetworkError.hpp  NetworkManager.hpp  Packet.hpp  PacketHeader.hpp  SocketBase.hpp  SocketHandle.hpp  TcpSocket.hpp  UdpSocket.hpp
Winsock/include/server/: TCPServer.hpp  UDP_SERVER.hpp
Winsock/src/Client/: TcpClient.cpp  UDPClient.cpp
Winsock/src/Core/: DNS_RESOLVER.cpp  Endpoint.cpp  Main.cpp  NetworkManager.cpp  Packet.cpp  SocketBase.cpp  SocketHandle.cpp  TcpSocket.cpp  UdpSocket.cpp
Winsock/src/Server/: TCPServer.cpp  UdpServer.cpp
